Bug 333328 - Knotes crashes after start
Summary: Knotes crashes after start
Status: RESOLVED FIXED
Alias: None
Product: knotes
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2014-04-11 16:15 UTC by Eugene
Modified: 2014-04-11 17:46 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eugene 2014-04-11 16:15:21 UTC
Application: knotes (4.13 rc)
KDE Platform Version: 4.13.0
Qt Version: 4.8.6
Operating System: Linux 3.14.0-031400-generic x86_64
Distribution: Ubuntu 14.04 LTS

-- Information about the crash:
- What I was doing when the application crashed:
Just started knotes when and after several seconts it crashed.

The crash can be reproduced every time.

-- Backtrace:
Application: KNotes (knotes), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f8ce2b56800 (LWP 6212))]

Thread 4 (Thread 0x7f8cbed13700 (LWP 6215)):
#0  0x00007f8cde6906bd in read () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007f8cd9e89c20 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f8cd9e48b14 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f8cd9e48f7b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f8cd9e4930a in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f8cc4119e16 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#6  0x00007f8cd9e6df15 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007f8cda328182 in start_thread (arg=0x7f8cbed13700) at pthread_create.c:312
#8  0x00007f8cde69f30d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 3 (Thread 0x7f8cbe512700 (LWP 6216)):
#0  0x00007f8cde6906bd in read () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007f8cd9e89c20 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f8cd9e48b14 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f8cd9e48f7b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f8cd9e490ec in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f8cd9e49129 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007f8cd9e6df15 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007f8cda328182 in start_thread (arg=0x7f8cbe512700) at pthread_create.c:312
#8  0x00007f8cde69f30d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 2 (Thread 0x7f8caffff700 (LWP 6219)):
#0  0x00007f8cde691fbd in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007f8cd9e48fe4 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f8cd9e490ec in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f8cdf2a97be in QEventDispatcherGlib::processEvents (this=0x7f8ca80008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:436
#4  0x00007f8cdf27b0af in QEventLoop::processEvents (this=this@entry=0x7f8cafffeda0, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f8cdf27b3a5 in QEventLoop::exec (this=this@entry=0x7f8cafffeda0, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007f8cdf177c5f in QThread::exec (this=this@entry=0x491d3b0) at thread/qthread.cpp:537
#7  0x00007f8cdf25c823 in QInotifyFileSystemWatcherEngine::run (this=0x491d3b0) at io/qfilesystemwatcher_inotify.cpp:265
#8  0x00007f8cdf17a32f in QThreadPrivate::start (arg=0x491d3b0) at thread/qthread_unix.cpp:349
#9  0x00007f8cda328182 in start_thread (arg=0x7f8caffff700) at pthread_create.c:312
#10 0x00007f8cde69f30d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 1 (Thread 0x7f8ce2b56800 (LWP 6212)):
[KCrash Handler]
#6  0x0000000000429cb6 in KNote::prepare (this=this@entry=0x4aa2660) at ../../knotes/notes/knote.cpp:858
#7  0x000000000042b0d1 in KNote::KNote (this=0x4aa2660, buildDoc=..., item=..., parent=<optimized out>, __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at ../../knotes/notes/knote.cpp:119
#8  0x000000000041528a in KNotesApp::createNote (this=this@entry=0x2840060, item=...) at ../../knotes/apps/knotesapp.cpp:263
#9  0x000000000041b9cf in KNotesApp::slotRowInserted (this=0x2840060, parent=..., start=<optimized out>, end=0) at ../../knotes/apps/knotesapp.cpp:249
#10 0x000000000042ce75 in KNotesApp::qt_static_metacall (_o=0x7fff8f73b060, _c=3775148740, _id=1, _a=0x10) at moc_knotesapp.cpp:121
#11 0x00007f8cdf29087a in QMetaObject::activate (sender=sender@entry=0x29bcdd0, m=m@entry=0x7f8cdf5e06a0 <QAbstractItemModel::staticMetaObject>, local_signal_index=local_signal_index@entry=5, argv=argv@entry=0x7fff8f73b6b0) at kernel/qobject.cpp:3539
#12 0x00007f8cdf2da664 in QAbstractItemModel::rowsInserted (this=this@entry=0x29bcdd0, _t1=..., _t2=0, _t3=0) at .moc/release-shared/moc_qabstractitemmodel.cpp:196
#13 0x00007f8cdf2765ce in QAbstractItemModel::endInsertRows (this=this@entry=0x29bcdd0) at kernel/qabstractitemmodel.cpp:2433
#14 0x00007f8ce13740a5 in Akonadi::EntityTreeModelPrivate::itemsFetched (this=this@entry=0x29bd110, collectionId=collectionId@entry=82, items=...) at ../../akonadi/entitytreemodel_p.cpp:603
#15 0x00007f8ce13745ea in Akonadi::EntityTreeModelPrivate::itemsFetched (this=0x29bd110, items=...) at ../../akonadi/entitytreemodel_p.cpp:510
#16 0x00007f8cdf29087a in QMetaObject::activate (sender=sender@entry=0x292c1b0, m=m@entry=0x7f8ce16fd020 <Akonadi::ItemFetchJob::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7fff8f73b9f0) at kernel/qobject.cpp:3539
#17 0x00007f8ce1397782 in Akonadi::ItemFetchJob::itemsReceived (this=this@entry=0x292c1b0, _t1=...) at ./moc_itemfetchjob.cpp:116
#18 0x00007f8ce139911b in timeout (this=<optimized out>) at ../../akonadi/itemfetchjob.cpp:78
#19 Akonadi::ItemFetchJobPrivate::aboutToFinish (this=<optimized out>) at ../../akonadi/itemfetchjob.cpp:68
#20 0x00007f8ce13aafeb in Akonadi::JobPrivate::delayedEmitResult (this=<optimized out>) at ../../akonadi/job.cpp:160
#21 0x00007f8cdf294c1e in QObject::event (this=0x292c1b0, e=<optimized out>) at kernel/qobject.cpp:1194
#22 0x00007f8cdfc6ee2c in QApplicationPrivate::notify_helper (this=this@entry=0x25073f0, receiver=receiver@entry=0x292c1b0, e=e@entry=0x6ba2ec0) at kernel/qapplication.cpp:4567
#23 0x00007f8cdfc754a0 in QApplication::notify (this=this@entry=0x7fff8f73c140, receiver=receiver@entry=0x292c1b0, e=e@entry=0x6ba2ec0) at kernel/qapplication.cpp:4353
#24 0x00007f8ce0979baa in KApplication::notify (this=0x7fff8f73c140, receiver=0x292c1b0, event=0x6ba2ec0) at ../../kdeui/kernel/kapplication.cpp:311
#25 0x00007f8cdf27c4dd in QCoreApplication::notifyInternal (this=0x7fff8f73c140, receiver=receiver@entry=0x292c1b0, event=event@entry=0x6ba2ec0) at kernel/qcoreapplication.cpp:953
#26 0x00007f8cdf27fb3d in sendEvent (event=0x6ba2ec0, receiver=0x292c1b0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#27 QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x24a7110) at kernel/qcoreapplication.cpp:1577
#28 0x00007f8cdf27ffe3 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1470
#29 0x00007f8cdf2a9f83 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#30 postEventSourceDispatch (s=0x250a160) at kernel/qeventdispatcher_glib.cpp:287
#31 0x00007f8cd9e48e04 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#32 0x00007f8cd9e49048 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#33 0x00007f8cd9e490ec in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#34 0x00007f8cdf2a97a1 in QEventDispatcherGlib::processEvents (this=0x24a8a10, flags=...) at kernel/qeventdispatcher_glib.cpp:434
#35 0x00007f8cdfd10bb6 in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#36 0x00007f8cdf27b0af in QEventLoop::processEvents (this=this@entry=0x7fff8f73c040, flags=...) at kernel/qeventloop.cpp:149
#37 0x00007f8cdf27b3a5 in QEventLoop::exec (this=this@entry=0x7fff8f73c040, flags=...) at kernel/qeventloop.cpp:204
#38 0x00007f8cdf280b79 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1225
#39 0x00007f8cdfc6d37c in QApplication::exec () at kernel/qapplication.cpp:3828
#40 0x000000000041276f in main (argc=1, argv=0x7fff8f73c298) at ../../knotes/apps/main.cpp:68

Reported using DrKonqi
Comment 1 Laurent Montel 2014-04-11 17:45:53 UTC
Git commit 61cadd624aa3606abe551fdf5bb3cade0306b36f by Montel Laurent.
Committed on 11/04/2014 at 17:45.
Pushed by mlaurent into branch 'KDE/4.13'.

Fix Bug 333328 - Knotes crashes after start

FIXED-IN: 4.13.1

M  +5    -1    agents/notesagent/notesagentalarmdialog.cpp
M  +3    -1    agents/notesagent/notesagentnotedialog.cpp
M  +6    -2    knotes/notes/knote.cpp
M  +2    -1    knotes/print/knoteprintobject.cpp
M  +4    -2    knotes/tests/apps/knotesakonadiapp.cpp
M  +6    -3    kontact/plugins/knotes/knotesiconview.cpp
M  +3    -1    noteshared/noteutils.cpp

http://commits.kde.org/kdepim/61cadd624aa3606abe551fdf5bb3cade0306b36f