Fix Bug 333328 - Knotes crashes after start

FIXED-IN: 4.13.1
BUG: 333328