print/knoteprintobject.cpp
@@ -51,7 +51,8 @@ QString KNotePrintObject::description() const
 QString KNotePrintObject::name() const
 {
     KMime::Message::Ptr noteMessage = mItem.payload<KMime::Message::Ptr>();
-    return noteMessage->subject(false)->asUnicodeString();
+    const KMime::Headers::Subject * const subject = noteMessage ? noteMessage->subject(false) : 0;
+    return subject ? subject->asUnicodeString() : QString();
 }
 
 QString KNotePrintObject::currentDateTime() const
